Sun Mar  6 21:49:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* sample/list.rb (MyElem#initialize): initialize @head
	  explicitely. Otherwise -W2 option makes following warning.
	  "warning: instance variable @head not initialized".
	  This issue was founded by Andrew Grimm. Thanks Andrew!
	  [ruby-core:35435][Bug#4471]

Sun Mar  6 05:21:41 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* class.c: fix camelCase to snake_case in documentation code examples.
	  patched by Andrew Grimm. fixes Bug #4469

	* marshal.c: ditto.

	* proc.c: ditto.

	* sample/biorhythm.rb: ditto.

	* vm_eval.c: ditto.

	* vm_method.c: ditto.


Sun Mar  6 03:22:27 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (io_cntl): use rb_thread_io_blocking_region() instead
	  rb_thread_blocking_region().

Sat Mar  5 22:54:36 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* include/ruby/intern.h: fix a typo of prototype declaration.
	  rb_mutex_try_lock -> rb_mutex_trylock [ruby-dev:43213]

Sat Mar  5 19:44:03 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_fcntl_lock): small clean up.

Sat Mar  5 01:33:46 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (io_cntl, nogvl_io_cntl): IO.fcntl() and IO.ioctl()
	  release GVL during calling kernel interface.
	  Suggested by Eric Wong. [ruby-core:35417][Bug #4463]

	* test/ruby/test_io.rb (TestIO#test_fcntl_lock): add new test for
	  IO.fcntl().

Fri Mar  4 23:09:12 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/testunit/test_parallel.rb
	  (test_should_run_all_without_any_leaks): consider that the order of
	  testcase could change. [ruby-dev:43300] [Bug #4466]

Fri Mar  4 22:01:14 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (io_cntl): change 'cmd' type to int. ioctl and fcntl need to
	  be passed int.
	* io.c (rb_io_ctl): ditto.

Fri Mar  4 21:10:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
